ingressroute-myapp.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: myapp-ingress
  namespace: default
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`myapp.local`)
    kind: Rule
    services:
    - name: myapp
      port: 80
